<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ===== Parent ===== -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>

    <!-- ===== Root coordinates ===== -->
    <groupId>com.tiktok</groupId>
    <artifactId>tiktok-backend</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>TikTok Backend — Monorepo Root</name>

    <!-- ===== Submodules ===== -->
    <modules>
        <!-- Shared libraries (build first) -->
        <module>libs/common-lib</module>
        <module>libs/event-schema</module>
        <module>libs/crypto-lib</module>
        <module>libs/security-lib</module>
        <module>libs/kafka-lib</module>

        <!-- Services -->
        <module>services/api-gateway</module>
        <module>services/auth-service</module>
        <module>services/user-service</module>
        <module>services/video-service</module>
        <module>services/media-worker</module>
        <module>services/interaction-service</module>
        <module>services/story-service</module>
        <module>services/recommendation-service</module>
        <module>services/chat-service</module>
        <module>services/notification-service</module>
        <module>services/product-service</module>
        <module>services/cart-service</module>
        <module>services/order-service</module>
        <module>services/payment-service</module>
        <module>services/inventory-service</module>
        <module>services/search-service</module>
        <module>services/admin-service</module>
        <module>services/analytics-service</module>
    </modules>

    <!-- ===== Global properties ===== -->
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Spring Cloud -->
        <spring-cloud.version>2023.0.3</spring-cloud.version>

        <!-- Database drivers -->
        <postgresql.version>42.7.3</postgresql.version>
        <mongodb.version>5.1.0</mongodb.version>

        <!-- Migration -->
        <flyway.version>10.15.0</flyway.version>

        <!-- Kafka -->
        <kafka.version>3.7.1</kafka.version>

        <!-- JWT -->
        <jjwt.version>0.12.6</jjwt.version>

        <!-- MapStruct -->
        <mapstruct.version>1.5.5.Final</mapstruct.version>

        <!-- Lombok -->
        <lombok.version>1.18.34</lombok.version>

        <!-- Testing -->
        <testcontainers.version>1.21.3</testcontainers.version>

        <!-- Observability -->
        <micrometer-tracing.version>1.3.2</micrometer-tracing.version>

        <!-- OpenAPI -->
        <springdoc.version>2.6.0</springdoc.version>
    </properties>

    <!-- ===== Dependency management (shared versions) ===== -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal libs -->
            <dependency>
                <groupId>com.tiktok</groupId>
                <artifactId>common-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tiktok</groupId>
                <artifactId>event-schema</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tiktok</groupId>
                <artifactId>crypto-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tiktok</groupId>
                <artifactId>security-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tiktok</groupId>
                <artifactId>kafka-lib</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- OpenAPI / Swagger -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- ===== Dependencies shared by ALL modules ===== -->
    <dependencies>
        <!-- Lombok — available everywhere -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Testing — available everywhere in test scope -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- ===== Build config shared by all modules ===== -->
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-maven-plugin</artifactId>
                    <version>${flyway.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>